(library
 (name mdx)
 (public_name mdx)
 (preprocess
  (action
   (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
 (libraries astring csexp fmt logs ocaml-version ocamlformat-rpc-lib
   odoc.parser re result sexplib0 spawn str))

(ocamllex lexer_mdx)

(ocamllex lexer_cram)

(ocamllex lexer_top)
